--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
     <title>Hello, world!</title>
+    <script src="https://kit.fontawesome.com/1242b6875a.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <div class="container">
-        <h1>Jerome</h1>
+    <div class="container-fluid bg-dark nav-tabs">
+        <nav class="navbar bg-dark navbar-dark navbar-expand-sm">
+          <div class="container">
+
+            <div class="navbar-brand">Jerome Valdez</div>
+            <div class="navbar-nav d-flex justify-content-end">
+              <a href="#" class="nav-item nav-link">Home</a>
+              <a href="#" class="nav-item nav-link">Profile</a>
+              <a href="#" class="nav-item nav-link">Contact</a>
+              <a href="#" class="nav-item nav-link">About Us</a>
+            </div>
+            <div class="navbar-text d-none d-lg-inline">contact number: (098)-1234-456 </div>
+          </div>
+
+        </nav>
     </div>
    <script src="js/bootstrap.min.js"></script>
+   <script src="js/jquery-3.6.0.js"></script>
+   <script src="popper.min.js"></script>
   </body>
 </html>
