--- a/index.html
+++ b/index.html
@@ -12,18 +12,114 @@
         <nav class="navbar bg-dark navbar-dark navbar-expand-sm">
           <div class="container">
 
-            <div class="navbar-brand">Jerome Valdez</div>
+            <div class="navbar-brand"><img src="Image/Logo.png" alt="Logo" width="60px"></div>
             <div class="navbar-nav d-flex justify-content-end">
               <a href="#" class="nav-item nav-link">Home</a>
               <a href="#" class="nav-item nav-link">Profile</a>
               <a href="#" class="nav-item nav-link">Contact</a>
               <a href="#" class="nav-item nav-link">About Us</a>
             </div>
-            <div class="navbar-text d-none d-lg-inline">contact number: (098)-1234-456 </div>
+            <div class="navbar-text d-none d-lg-inline nav-link"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;(098)-1234-456 </div>
           </div>
 
         </nav>
     </div>
+    <div class="container">
+      <a href="#" class="badge badge-success ">button</a>
+      <h1>Lorem</h1>
+      OK Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <br>
+      <div class="progress">
+        <div class="progress-bar bg-success progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+      </div>
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    <div class="container">
+      <h1>Lorem</h1>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio, 
+      amet corporis magnam vel, culpa iste aliquam voluptatum eligendi exercitationem itaque molestias, 
+      quas reiciendis? Fugit, minus iste voluptatibus sunt ad asperiores!
+    </div>
+    
    <script src="js/bootstrap.min.js"></script>
    <script src="js/jquery-3.6.0.js"></script>
    <script src="popper.min.js"></script>
